# rio-airbnb-pricing-lab

./: .gitignore  LICENSE  README.md  README.pt-BR.md  pyproject.toml  requirements.txt
.githooks/: post-commit
.github/workflows/: ci.yml  pages.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/curated/: calendar_seasonality_detrended.parquet  listings.parquet  manifest.json  occupancy.parquet
docs/: ground_truth_validation.md
docs/superpowers/plans/: 2026-06-08-phase1-foundation-data-pipeline.md  2026-06-08-phase2-model-recommender.md  2026-06-08-phase3-delivery.md  2026-06-12-phase2-positioning-advisor.md  2026-06-14-phase3-delivery.md  2026-06-15-beach-proximity-feature.md
docs/superpowers/specs/: 2026-06-08-rio-airbnb-pricing-lab-design.md
notebooks/: eda.ipynb
reports/: decision_report.md
scripts/: build_eda_notebook.py  generate_overview.py  overview_content.py
src/: config.py  pipeline.py  schemas.py
src/data/: download.py  ingest.py
src/model/: __init__.py  comparables.py  demand_context.py  features.py  hedonic.py  recommender.py  service.py  validation.py
src/transform/: calendar.py  clean_price.py  geo.py  listings.py  occupancy.py  parse_fields.py  seasonality.py
tests/: conftest.py  test_calendar.py  test_clean_price.py  test_comparables.py  test_demand_context.py  test_download.py  test_features.py  test_geo.py  test_hedonic.py  test_ingest.py  test_listings.py  test_occupancy.py  test_parse_fields.py  test_pipeline.py  test_recommender.py  test_schemas.py  test_seasonality.py  test_service.py  test_validation.py
