[project]
name = "rio-airbnb-pricing-lab"
version = "0.1.0"
description = "Pricing decision lab for Airbnb hosts in Rio de Janeiro"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=1.1",
    "pandera>=0.22",
    "requests>=2.32",
    "pyarrow>=17",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.9.0",
]

[project.optional-dependencies]
# Phase-3 delivery deps, kept out of the core pipeline/model install.
# The Streamlit Cloud deploy installs `app` (see requirements.txt); the notebook
# render uses `notebook`. CI does not install either, so the test suite stays lean.
app = [
    "streamlit>=1.40",
    "plotly>=5.24",
]
notebook = [
    "matplotlib>=3.9",
    "jupyter>=1.1",
    "nbconvert>=7.16",
    "ipykernel>=6.29",
    "nbstripout>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Content-generation scripts (PT-BR study notebook) are not part of the pipeline
# library; their long content strings shouldn't be held to the 100-char limit.
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
