[project]
name = "rio-airbnb-pricing-lab"
version = "0.1.0"
description = "Pricing decision lab for Airbnb hosts in Rio de Janeiro"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "duckdb>=1.1",
    "pandera>=0.22",
    "requests>=2.32",
    "pyarrow>=17",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.9.0",
    # Dashboard is a first-class deliverable. These are CORE (not an optional extra) so Streamlit
    # Cloud installs them whichever dependency file it picks (it prefers pyproject/uv.lock over
    # requirements.txt and does NOT install optional extras).
    "streamlit>=1.40",
    "plotly>=5.24",
]

[project.optional-dependencies]
# Only the notebook-render toolchain stays optional (CI doesn't install it, so the suite stays lean).
# streamlit + plotly are CORE deps now — see the note in [project.dependencies].
notebook = [
    "matplotlib>=3.9",
    "jupyter>=1.1",
    "nbconvert>=7.16",
    "ipykernel>=6.29",
    "nbstripout>=0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Content-generation scripts (PT-BR study notebook) are not part of the pipeline
# library; their long content strings shouldn't be held to the 100-char limit.
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
